--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
             android:name=".DashboardActivity"
             android:exported="false" />
             
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Continuity.NoActionBar"/>
+            
     </application>
 
 </manifest>
