--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
             android:name=".ProfileActivity"
             android:exported="false"
             android:theme="@style/Theme.Continuity.NoActionBar"/>
+
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Continuity.NoActionBar"/>
             
     </application>
 
